# open-ocr-llm-eval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: README.md  test_samples.json
docs/: 평가지표.md
docs/week1/: llm_candidates.md  ocr_candidates.md
docs/week1/report/: 언커먼랩_감자빵_1주차_llm.md  언커먼랩_감자빵_1주차_ocr.md
docs/week1/taejeong_models/: Qwen3_5_4B.ipynb
docs/week2/: llm_category_candidates.md  prompt.md  prompt_eng.md  prompt_kr.md  week2_assignment.md  week2_meeting_note.md  간이 시험 결과.md  모델 선정.md
docs/week2/report/: 언커먼랩_감자빵_2주차.md
docs/week3/: 3주차 멘토링.md  document_category_prompts.md  document_classifier_prompt.md  document_classifier_prompt_category_only.md  document_classifier_prompt_detail.md  document_classifier_prompt_korean.md  document_classifier_prompt_only_category.md  final_document_classification_prompt_gemini.md  prompt_mvp.md  week3_assignment.md
docs/week3/report/: 언커먼랩_감자빵_3주차.md
results/LLM/: classify.py  evaluate.py  prompts.py  run_all.py
results/LLM/EXAONE/: EXAONE-3.5-2.4B-Instruct.ipynb
results/LLM/output/exaone-3.5-7.8b-en/: metrics.json  predictions.jsonl
results/LLM/output/exaone-3.5-7.8b-ko/: metrics.json  predictions.jsonl
results/LLM/output/ministral-3-8b-ko/: metrics.json  predictions.jsonl
results/LLM/output/qwen3-4b-en/: metrics.json  predictions.jsonl
results/LLM/output/qwen3-4b-ko/: metrics.json  predictions.jsonl
results/LLM/output/qwen3-8b-en/: metrics.json  predictions.jsonl
results/LLM/output/qwen3-8b-ko/: metrics.json  predictions.jsonl
results/OCR/GLM-OCR/: test.py
results/OCR/paddleOCR-VL/: test.py
results/OCR/paddleOCR-VL/output/: test.md  test_res.json
results/OCR/paddleOCR-VL/output/물류/1.상업송장/IMG_OCR_6_T_NV_000322/: IMG_OCR_6_T_NV_000322.md
results/OCR/paddleOCR-VL/output/물류/1.상업송장/IMG_OCR_6_T_NV_001677/: IMG_OCR_6_T_NV_001677.md
results/OCR/paddleOCR-VL/output/물류/1.상업송장/IMG_OCR_6_T_NV_001774/: IMG_OCR_6_T_NV_001774.md
results/OCR/paddleOCR-VL/output/물류/1.상업송장/IMG_OCR_6_T_NV_001825/: IMG_OCR_6_T_NV_001825.md
results/week1/: EXAONE_4_0_1_2B.ipynb  gemma_4_E4B.ipynb
results/week1/GLM-OCR/: test.py
results/week1/OCR/paddleOCR-VL/: test.py
scripts/: README.md  eval_llm.py
src/: src.md
src/taejeong_models/: Qwen3_5_4B.ipynb
week1/: metoring.md  model_selection_criteria.md  week1_assignment.md
(+88 files in other folders)
